--- a/MusicPlayer/Base.lproj/Main.storyboard
+++ b/MusicPlayer/Base.lproj/Main.storyboard
@@ -15,9 +15,52 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:00:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uMp-wf-fWq">
+                                <rect key="frame" x="161" y="329" width="71" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="aVw-Xn-eC2">
+                                <rect key="frame" x="14" y="366" width="365" height="31"/>
+                                <color key="minimumTrackTintColor" systemColor="systemRedColor"/>
+                                <connections>
+                                    <action selector="sliderValueChange:" destination="BYZ-38-t0r" eventType="valueChanged" id="oKo-Tj-P90"/>
+                                </connections>
+                            </slider>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yMR-pM-hnz">
+                                <rect key="frame" x="96.666666666666686" y="109" width="200" height="200"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="065-UD-mwb"/>
+                                    <constraint firstAttribute="height" constant="200" id="1Q6-5n-A7A"/>
+                                </constraints>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="Button" image="button_play"/>
+                                <state key="selected" image="button_pause"/>
+                                <connections>
+                                    <action selector="touchPlayPauseButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Jre-F6-Ux3"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="yMR-pM-hnz" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="A7Z-kP-7a7"/>
+                            <constraint firstItem="aVw-Xn-eC2" firstAttribute="top" secondItem="uMp-wf-fWq" secondAttribute="bottom" constant="16" id="AyQ-tP-UHq"/>
+                            <constraint firstItem="aVw-Xn-eC2" firstAttribute="top" secondItem="uMp-wf-fWq" secondAttribute="bottom" constant="16" id="F34-o4-ohX"/>
+                            <constraint firstItem="uMp-wf-fWq" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Kt5-s1-3IM"/>
+                            <constraint firstItem="yMR-pM-hnz" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="50" id="Q16-Bf-gov"/>
+                            <constraint firstItem="aVw-Xn-eC2" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="gbt-cp-vsa"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="aVw-Xn-eC2" secondAttribute="trailing" constant="16" id="jN5-0Y-eff"/>
+                            <constraint firstItem="uMp-wf-fWq" firstAttribute="top" secondItem="yMR-pM-hnz" secondAttribute="bottom" constant="20" id="ngR-en-ZKn"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="playPauseButton" destination="yMR-pM-hnz" id="ypV-Wd-dEp"/>
+                        <outlet property="progressSlider" destination="aVw-Xn-eC2" id="mGJ-tW-3ie"/>
+                        <outlet property="timeLabel" destination="uMp-wf-fWq" id="atq-7i-wiK"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -25,8 +68,13 @@
         </scene>
     </scenes>
     <resources>
+        <image name="button_pause" width="185" height="185"/>
+        <image name="button_play" width="187" height="189"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
